build_logs.txt

> d-speedexplorer@0.1.7 tauri
> tauri build

        Info Looking up installed tauri packages to check mismatched versions...
     Running beforeBuildCommand `npm run build`

> d-speedexplorer@0.1.7 build
> tsc && vite build

[36mvite v7.3.1 [32mbuilding client environment for production...[36m[39m
transforming...
[32mÔ£ô[39m 1732 modules transformed.
rendering chunks...
computing gzip size...
[2mdist/[22m[32mindex.html                 [39m[1m[2m  0.52 kB[22m[1m[22m[2m Ôöé gzip:  0.36 kB[22m
[2mdist/[22m[35massets/index-BONdOjkF.css  [39m[1m[2m 62.48 kB[22m[1m[22m[2m Ôöé gzip:  9.91 kB[22m
[2mdist/[22m[36massets/index-76XbC8T6.js   [39m[1m[2m  0.12 kB[22m[1m[22m[2m Ôöé gzip:  0.13 kB[22m
[2mdist/[22m[36massets/index-CfBik5Tz.js   [39m[1m[2m331.52 kB[22m[1m[22m[2m Ôöé gzip: 99.54 kB[22m
[32mÔ£ô built in 8.42s[39m
   Compiling windows v0.61.3
   Compiling windows-core v0.52.0
   Compiling tauri-plugin-drag v2.1.0
   Compiling windows-implement v0.52.0
   Compiling windows-interface v0.52.0
   Compiling base64 v0.21.7
   Compiling windows v0.52.0
   Compiling d-speedexplorer v0.1.7 (D:\SpeedExplorer\src-tauri)
   Compiling drag v2.1.0
   Compiling webview2-com-sys v0.38.2
   Compiling tao v0.34.5
   Compiling webview2-com v0.38.2
   Compiling tauri-runtime v2.9.2
   Compiling wry v0.53.5
   Compiling tauri-runtime-wry v2.9.3
   Compiling tauri v2.9.5
   Compiling tauri-plugin-fs v2.4.5
   Compiling tauri-plugin-opener v2.5.3
   Compiling tauri-plugin-process v2.3.1
   Compiling tauri-plugin-dialog v2.6.0
warning: unused import: `tauri::Runtime`
    --> src\lib.rs:1549:21
     |
1549 |                 use tauri::Runtime;
     |                     ^^^^^^^^^^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant named `DragOver` found for enum `tauri::WindowEvent`
    --> src\lib.rs:1537:37
     |
1537 |                 tauri::WindowEvent::DragOver { position, .. } => {
     |                                     ^^^^^^^^ variant not found in `tauri::WindowEvent`

error[E0599]: no variant named `DragEnter` found for enum `tauri::WindowEvent`
    --> src\lib.rs:1540:37
     |
1540 |                 tauri::WindowEvent::DragEnter { position, .. } => {
     |                                     ^^^^^^^^^ variant not found in `tauri::WindowEvent`

error[E0599]: no variant or associated item named `DragLeave` found for enum `tauri::WindowEvent` in the current scope
    --> src\lib.rs:1543:37
     |
1543 |                 tauri::WindowEvent::DragLeave => println!("[RUST DIAGNOSTIC] DragLeave"),
     |                                     ^^^^^^^^^ variant or associated item not found in `tauri::WindowEvent`

For more information about this error, try `rustc --explain E0599`.
warning: `d-speedexplorer` (lib) generated 1 warning
error: could not compile `d-speedexplorer` (lib) due to 3 previous errors; 1 warning emitted
failed to build app: failed to build app
       Error failed to build app: failed to build app
